--- a/patina/templates/servers_show.html
+++ b/patina/templates/servers_show.html
@@ -20,7 +20,12 @@
       </h2>
       <div class="mt-2 flex items-center text-sm text-gray-500">{{ game }}</div>
     </div>
-    <div class="border border-red-500">map</div>
+    <div
+      class="border border-red-500"
+      hx-ext="patina-map"
+      hx-trigger="sse:players_json"
+      patina-map-url="/s/{{ name }}/map"
+    />
   </main>
 
   <aside class="lg:w-2/5 md:w-3/5 p-4 m-4">
