feat(patina): playing around with tailwind

--- a/patina/templates/servers_info.html
+++ b/patina/templates/servers_info.html
@@ -1,6 +1,6 @@
-<table class="min-w-full divide-y divide-gray-200">
+<table class="min-w-full divide-y divide-gray-200 border-spacing-2">
   <thead>
-    <tr>
+    <tr class="">
       <th
         scope="col"
         class="text-center truncate text-sm font-medium text-gray-500 p-2"
@@ -31,7 +31,7 @@
   </thead>
   <tbody class="divide-y divide-gray-200">
     {% for player in players %}
-    <tr>
+    <tr class="bg-white m-4">
       <td
         class="
           whitespace-nowrap
