--- a/patina/templates/layout.html
+++ b/patina/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-white">
+<html lang="en">
   <head>
     <title></title>
     <meta charset="UTF-8" />
@@ -11,6 +11,12 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/sse.js"></script>
+    <style>
+      .patina-map-container svg {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
     <script>
       (function () {
         var api;
@@ -79,13 +85,13 @@
                 e = document.createElementNS("http://www.w3.org/2000/svg", "g");
                 e.innerHTML = `
                   <circle cx="10" cy="10" fill="none" r="5" stroke-width="1">
-                    <animate attributeName="stroke" to="white" from="${player.colour}" dur="1s" begin="0s" repeatCount="indefinite" />
-                    <animate attributeName="stroke-width" from="1" to="4" dur="1s" begin="0s" repeatCount="indefinite" />
-                    <animate attributeName="r" from="5" to="15" dur="1s" begin="0s" repeatCount="indefinite"/>
-                    <animate attributeName="opacity" from="1" to="0" dur="1s" begin="0s" repeatCount="indefinite"/>
+                  <animate attributeName="stroke" to="white" from="${player.colour}" dur="1s" begin="0s" repeatCount="indefinite" />
+                  <animate attributeName="stroke-width" from="1" to="4" dur="1s" begin="0s" repeatCount="indefinite" />
+                  <animate attributeName="r" from="5" to="15" dur="1s" begin="0s" repeatCount="indefinite"/>
+                  <animate attributeName="opacity" from="1" to="0" dur="1s" begin="0s" repeatCount="indefinite"/>
                   </circle>
                   <circle cx="10" cy="10" fill="${player.colour}" stroke="white" stroke-width="1" r="5"/>
-                `;
+                  `;
                 e.setAttribute("id", id);
                 tgt.append(e);
               }
@@ -101,7 +107,55 @@
     </script>
   </head>
 
-  <body class="h-full bg-gray-100">
-    {% block body %}{% endblock %}
+  <body class="bg-gray-100">
+    <div class="min-h-screen flex flex-col h-screen">
+      <nav class="bg-gray-800">
+        <div class="mx-auto px-2">
+          <div class="flex h-16 overflow-y-auto">
+            <div class="flex items-center text-indigo-500">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-8 h-8"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z"
+                />
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+                />
+              </svg>
+            </div>
+            <div
+              class="ml-2 flex items-center space-x-2 font-medium text-gray-300"
+            >
+              <a
+                href="#"
+                class="
+                  bg-gray-900
+                  text-white
+                  px-2
+                  py-2
+                  rounded-md
+                  text-sm
+                  font-medium
+                "
+                aria-current="page"
+                >Dashboard</a
+              >
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      {% block body %}{% endblock %}
+    </div>
   </body>
 </html>
